--- a/SleepEDF/NONOS_SleepEDF_result.ipynb
+++ b/SleepEDF/NONOS_SleepEDF_result.ipynb
@@ -15,7 +15,8 @@
     "import fcwt\n",
     "import papto_functions as papto\n",
     "import matplotlib.pyplot as plt\n",
-    "import mat73"
+    "import mat73\n",
+    "import os"
    ]
   },
   {
@@ -105,39 +106,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath = '/home/Documents/Data/Experiment9/bigBW/data_idx/'\n",
-    "\n",
-    "exp_num = '9'\n",
-    "\n",
-    "result = torch.tensor([])\n",
-    "dataset_x = torch.tensor([])\n",
-    "dataset_y = torch.tensor([])\n",
-    "dataset_idx = torch.tensor([])\n",
-    "\n",
-    "for gpu in range(4):\n",
-    "    temp_result = np.load(fpath + 'Experiment' + exp_num + '_result_' + 'gpu' + str(gpu) + '.npy')\n",
-    "    result = torch.cat((result, torch.tensor(temp_result)), 0)\n",
-    "\n",
-    "    temp_dataset_x = np.load(fpath + 'Experiment' + exp_num + '_dataset_x_' + 'gpu' + str(gpu) + '.npy')\n",
-    "    dataset_x = torch.cat((dataset_x, torch.tensor(temp_dataset_x)), 0)\n",
-    "\n",
-    "    temp_dataset_y = np.load(fpath + 'Experiment' + exp_num + '_dataset_y_' + 'gpu' + str(gpu) + '.npy')\n",
-    "    dataset_y = torch.cat((dataset_y, torch.tensor(temp_dataset_y)), 0)\n",
-    "\n",
-    "    temp_dataset_idx = np.load(fpath + 'Experiment' + exp_num + '_dataset_idx_' + 'gpu' + str(gpu) + '.npy')\n",
-    "    dataset_idx = torch.cat((dataset_idx, torch.tensor(temp_dataset_idx)), 0)\n",
-    "\n",
-    "result = np.load('/home/Documents/Data/Experiment' + exp_num + '/bigBW/' + 'Experiment' + exp_num + '_result.npy')\n",
-    "dataset_x = np.load('/home/Documents/Data/Experiment' + exp_num + '/bigBW/' + 'Experiment' + exp_num + '_dataset_x.npy')\n",
-    "dataset_y = np.load('/home/Documents/Data/Experiment' + exp_num + '/bigBW/' + 'Experiment' + exp_num + '_dataset_y.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fs = 100\n",
     "t_len = 20\n",
     "data_len = fs*t_len\n",
@@ -147,131 +115,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LPF"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.signal import firwin, lfilter, firwin, freqz, group_delay, filtfilt\n",
-    "from scipy.signal import butter, filtfilt\n",
-    "\n",
-    "cutoff_freq = [4]\n",
-    "\n",
-    "# Define the filter order\n",
-    "order = 4\n",
-    "\n",
-    "# Calculate the normalized cutoff frequency\n",
-    "normalized_cutoff_freq = [freq / (fs / 2) for freq in cutoff_freq]\n",
-    "\n",
-    "# Design the Butterworth filter\n",
-    "b, a = butter(order, normalized_cutoff_freq, btype='low')\n",
-    "\n",
-    "x_org = unpad(torch.tensor(dataset_x), data_len).numpy()\n",
-    "LPF = np.zeros((x_org.shape[0], x_org.shape[1], x_org.shape[2]))\n",
-    "\n",
-    "for i in range(result.shape[0]):\n",
-    "    for j in range(result.shape[1]):\n",
-    "        x = x_org[i, j, :]\n",
-    "        LPF[i, j, :] = filtfilt(b, a, x)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BPF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.save('/home/Documents/Data/x_org.npy', x_org) # data extract for MATLAB code\n",
-    "\n",
-    "# MATLAB code belows\n",
-    "##################################\n",
-    "# fpath = \"/home/Documents/Data/\"\n",
-    "# fs = 100;\n",
-    "\n",
-    "# x_org = readNPY(strcat(fpath, 'x_org.npy'));\n",
-    "\n",
-    "# x_bp = single(zeros(52, 1, 2000));\n",
-    "\n",
-    "# cutoff_freq = [0.5 4];\n",
-    "# order = 3300;\n",
-    "# bpFilt = fir1(order, cutoff_freq./(fs/2)); % bandpass filteringw using hamming window\n",
-    "# D = mean(grpdelay(bpFilt));\n",
-    "\n",
-    "# for i = 1:52\n",
-    "#     x_filt = filter(bpFilt, 1, [squeeze(x_org(i, :, :)); zeros(D, 1)]); % Append D zeros to the input data\n",
-    "#     x_filt = x_filt(D+1:end);                  % Shift data to compensate for delay\n",
-    "#     x_bp(i, :, :) = x_filt;\n",
-    "# end\n",
-    "\n",
-    "# writeNPY(x_bp, strcat(fpath, 'x_bp.npy'));\n",
-    "##################################\n",
-    "\n",
-    "BPF = np.load('/home/Documents/Data/x_bp_from1Hz.npy')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### NONOS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(52, 1, 2000)\n",
-      "(52, 1, 2000)\n"
-     ]
-    }
-   ],
-   "source": [
-    "cue_time = 10\n",
-    "fake_x_ap = result\n",
-    "\n",
-    "cutoff_freq = [4]\n",
-    "\n",
-    "# Define the filter order\n",
-    "order = 4\n",
-    "\n",
-    "# Calculate the normalized cutoff frequency\n",
-    "normalized_cutoff_freq = [freq / (fs / 2) for freq in cutoff_freq]\n",
-    "\n",
-    "# Design the Butterworth filter\n",
-    "b, a = butter(order, normalized_cutoff_freq, btype='low')\n",
-    "\n",
-    "temp_fake_x_ap = result\n",
-    "temp_x = dataset_x\n",
-    "temp_x = unpad(torch.tensor(temp_x), data_len).numpy()\n",
-    "\n",
-    "fake_x_p_LPF = np.zeros((temp_x.shape[0], temp_x.shape[1], temp_x.shape[2]))\n",
-    "\n",
-    "print(temp_fake_x_ap.shape)\n",
-    "print(temp_x.shape)\n",
-    "\n",
-    "for i in range(result.shape[0]):\n",
-    "    for j in range(result.shape[1]):\n",
-    "        x = temp_x[i, j, :] - temp_fake_x_ap[i, j, :]\n",
-    "        fake_x_p_LPF[i, j, :] = filtfilt(b, a, x)"
+    "org_x = np.load(os.getcwd() + '/test_data/org_x.npy')\n",
+    "BPF = np.load(os.getcwd() + '/test_data/BPF.npy')\n",
+    "NONOS_osc = np.load(os.getcwd() + '/test_data/NONOS_osc.npy')\n",
+    "NONOS_nosc = np.load(os.getcwd() + '/test_data/NONOS_nosc.npy')\n",
+    "time = np.load(os.getcwd() + '/test_data/time.npy')"
    ]
   },
   {
@@ -283,16 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wake -> Sleep\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -300,7 +146,7 @@
        " [Text(0, 1, '1'), Text(0, 2, '2'), Text(0, 3, '3'), Text(0, 4, '4')])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,31 +162,6 @@
     }
    ],
    "source": [
-    "### LPF + fake_x_p\n",
-    "data_idx = 24 # 24\n",
-    "y_data = dataset_y[data_idx]\n",
-    "print('Sleep -> Wake' if y_data == 2 else 'Wake -> Sleep')\n",
-    "\n",
-    "org_x = unpad(torch.tensor(dataset_x), data_len).numpy().squeeze()\n",
-    "\n",
-    "# fake_x_ap_before = fake_x_ap[data_idx, :, lb_idx:cue_time*fs]\n",
-    "NONOS_before = fake_x_p_LPF[data_idx, :, lb_idx:cue_time*fs]\n",
-    "NONOS_after = fake_x_p_LPF[data_idx, :, cue_time*fs:ub_idx]\n",
-    "NONOS_cat = np.concatenate((NONOS_before, NONOS_after), axis=1)\n",
-    "NONOS_cat_wo_LPF = temp_x - temp_fake_x_ap\n",
-    "NONOS_cat_wo_LPF = NONOS_cat_wo_LPF[data_idx, :, :]\n",
-    "\n",
-    "NONOS_nosc = temp_fake_x_ap[data_idx, :, :]\n",
-    "\n",
-    "# Simple LPF\n",
-    "LPF_before = LPF[data_idx, :, lb_idx:cue_time*fs]\n",
-    "LPF_after = LPF[data_idx, :, cue_time*fs:ub_idx]\n",
-    "LPF_cat = np.concatenate((LPF_before, LPF_after), axis=1)\n",
-    "\n",
-    "BPF_before = BPF[data_idx, :, lb_idx:cue_time*fs]\n",
-    "BPF_after = BPF[data_idx, :, cue_time*fs:ub_idx]\n",
-    "BPF_cat = np.concatenate((BPF_before, BPF_after), axis=1)\n",
-    "\n",
     "# PAPTO's wavelet for x_org\n",
     "fs = 100\n",
     "n = fs*20\n",
@@ -353,7 +174,7 @@
     "fstep = 0.25\n",
     "fVec = np.arange(fmin, fmax, fstep)\n",
     "\n",
-    "temp_org = org_x[data_idx, :]\n",
+    "temp_org = org_x\n",
     "temp_org = np.expand_dims(temp_org, axis=0)\n",
     "TFR_org, tVEC = papto.TFR_via_morlet_wavelet(temp_org, fs, fVec)\n",
     "\n",
@@ -363,7 +184,7 @@
     "fstep = 0.25\n",
     "fVec = np.arange(fmin, fmax, fstep)\n",
     "\n",
-    "temp_BPF = BPF_cat.squeeze()\n",
+    "temp_BPF = BPF.squeeze()\n",
     "temp_BPF = np.expand_dims(temp_BPF, axis=0)\n",
     "TFR_BPF, tVEC = papto.TFR_via_morlet_wavelet(temp_BPF, fs, fVec)\n",
     "\n",
@@ -373,7 +194,7 @@
     "fstep = 0.25\n",
     "fVec = np.arange(fmin, fmax, fstep)\n",
     "\n",
-    "temp_osc = NONOS_cat.squeeze()\n",
+    "temp_osc = NONOS_osc.squeeze()\n",
     "temp_osc = np.expand_dims(temp_osc, axis=0)\n",
     "TFR_osc, tVEC = papto.TFR_via_morlet_wavelet(temp_osc, fs, fVec)\n",
     "\n",
@@ -383,7 +204,7 @@
     "fstep = 0.25\n",
     "fVec = np.arange(fmin, fmax, fstep)\n",
     "\n",
-    "temp_nosc = fake_x_ap[data_idx, :, :].squeeze()\n",
+    "temp_nosc = NONOS_nosc.squeeze()\n",
     "temp_nosc = np.expand_dims(temp_nosc, axis=0)\n",
     "TFR_nosc, tVEC = papto.TFR_via_morlet_wavelet(temp_nosc, fs, fVec)\n",
     "\n",
@@ -405,10 +226,10 @@
     "plt.tight_layout()\n",
     "plt.subplot(5, 1, 1)\n",
     "time = np.linspace(0, 20, 20*fs)\n",
-    "ax1.plot(time, org_x[data_idx, :], color='gray', label='fake_x_ap', linewidth=3)\n",
-    "ax1.plot(time, BPF_cat[0, :], color='green', label='BPF_cat')\n",
-    "ax1.plot(time, NONOS_cat[0, :], color='orange', label='NONOS_osc')\n",
-    "ax1.plot(time, NONOS_nosc[0, :], color='r', label='NONOS_osc')\n",
+    "ax1.plot(time, org_x, color='gray', label='fake_x_ap', linewidth=3)\n",
+    "ax1.plot(time, BPF, color='green', label='BPF_cat')\n",
+    "ax1.plot(time, NONOS_osc, color='orange', label='NONOS_osc')\n",
+    "ax1.plot(time, NONOS_nosc, color='r', label='NONOS_osc')\n",
     "ax1.axvline(x=10, color='k', linestyle='--', linewidth=2)\n",
     "plt.ylabel('Amplitude [a.u.]', fontsize=15)\n",
     "plt.legend(['Original signal', 'BPF', 'Oscillation (ours)', 'Non-oscillation (ours)', 'Stage transition'], loc='upper right', fontsize=12)\n",
@@ -474,25 +295,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Results for static use of SpecParam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import specparam\n",
     "from specparam import SpectralModel\n",
     "\n",
+    "cue_time = 10\n",
     "temp_x = org_x\n",
     "\n",
-    "before_x = temp_x[data_idx, lb_idx:cue_time*fs]\n",
-    "after_x = temp_x[data_idx, cue_time*fs:ub_idx]\n",
+    "before_x = temp_x[lb_idx:cue_time*fs]\n",
+    "after_x = temp_x[cue_time*fs:ub_idx]\n",
     "\n",
     "before_R = torch.abs(torch.fft.rfft(torch.tensor(before_x), dim=-1)).numpy()\n",
     "after_R = torch.abs(torch.fft.rfft(torch.tensor(after_x), dim=-1)).numpy()\n",
@@ -508,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -610,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2cb64fc0ee0>"
+       "<matplotlib.legend.Legend at 0x2214df99e50>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -635,15 +459,15 @@
     }
    ],
    "source": [
-    "delta_subtracted_x = org_x[data_idx, :] - BPF_cat[0, :]\n",
+    "delta_subtracted_x = org_x - BPF\n",
     "\n",
-    "fft_org_x = np.fft.rfft(org_x[data_idx, :])\n",
-    "fft_BPF = np.fft.rfft(BPF_cat[0, :])\n",
-    "fft_osc = np.fft.rfft(NONOS_cat[0, :])\n",
-    "fft_nosc = np.fft.rfft(NONOS_nosc[0, :])\n",
+    "fft_org_x = np.fft.rfft(org_x)\n",
+    "fft_BPF = np.fft.rfft(BPF)\n",
+    "fft_osc = np.fft.rfft(NONOS_osc)\n",
+    "fft_nosc = np.fft.rfft(NONOS_nosc)\n",
     "fft_ds_x = np.fft.rfft(delta_subtracted_x)\n",
     "\n",
-    "freqs = np.fft.rfftfreq(len(org_x[data_idx, :]), 1/fs)\n",
+    "freqs = np.fft.rfftfreq(len(org_x), 1/fs)\n",
     "\n",
     "fig = plt.figure()\n",
     "plt.plot(freqs, np.log10(np.abs(fft_org_x)), color='gray', label='Original signal', linewidth=5)\n",
@@ -670,34 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_x = org_x\n",
-    "\n",
-    "before_x = temp_x[data_idx, :]\n",
-    "after_x = temp_x[data_idx, :]\n",
-    "\n",
-    "before_x = torch.tensor(before_x)\n",
-    "after_x = torch.tensor(after_x)\n",
-    "temp_x = torch.cat((before_x, after_x), dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extraction numpy for MATLAB code\n",
-    "np.save('/home/Documents/Data/data24.npy', temp_x.numpy())\n",
-    "# Please see the MATLAB code, \"SPRiNT_NONOS_v0a.m\" for extract the .mat files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +503,7 @@
        "Text(0, 0.5, '[a.u.]')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -722,14 +519,13 @@
     }
    ],
    "source": [
-    "fpath = '/home/Documents/Data/'\n",
-    "sprint_offset = mat73.loadmat(fpath + 'SPRiNT_offset.mat')\n",
+    "sprint_offset = mat73.loadmat(os.getcwd() + '/test_data/SPRiNT_offset.mat')\n",
     "sprint_offset = sprint_offset['offset']\n",
     "\n",
-    "sprint_exponent = mat73.loadmat(fpath + 'SPRiNT_exponent.mat')\n",
+    "sprint_exponent = mat73.loadmat(os.getcwd() + '/test_data/SPRiNT_exponent.mat')\n",
     "sprint_exponent = sprint_exponent['exponent']\n",
     "\n",
-    "sprint_time = mat73.loadmat(fpath + 'SPRiNT_time.mat')\n",
+    "sprint_time = mat73.loadmat(os.getcwd() + '/test_data/SPRiNT_time.mat')\n",
     "sprint_time = sprint_time['time']\n",
     "\n",
     "indices = np.where((sprint_time >= 5) & (sprint_time <= 15))[0]\n",
